--- a/css/bear.css
+++ b/css/bear.css
@@ -9,5 +9,11 @@ html {
 }
 
 /* Write your solution here */
-@media 
+@media only screen and (max-width: 1196px)  {
+  
+  html{
+    min-width:800px;
+  }
+}
+
 
