--- a/css/bear.css
+++ b/css/bear.css
@@ -11,8 +11,8 @@ html {
 /* Write your solution here */
 @media only screen and (max-width: 1196px)  {
   
-  html{
-    min-width:800px;
+  #bear{
+    left:800px;
   }
 }
 
