--- a/css/dolphin.css
+++ b/css/dolphin.css
@@ -20,3 +20,8 @@ html {
 
 /* Write your solution here */
 
+@media only screen and (max-width: 1170px) and (min-width: 406px)  {
+   #dolphin{
+     top: 0px;
+   }
+}
